[scheduler] Add keep-active in background metrics.

Measure the amount of work done in background when keep-active signal is
present. This is to allow us to test the theory that we stopped stopping
timers in background after 5 minutes on Android due to widespread
keep-active signal.

R=panicker@chromium.org,rkaplow@chromium.org
BUG=823482

Change-Id: I653016d795a1903ea9d943e3c2b962ab9c1ba088
Reviewed-on: https://chromium-review.googlesource.com/973225
Reviewed-by: Shubhie Panicker <panicker@chromium.org>
Reviewed-by: Robert Kaplow <rkaplow@chromium.org>
Commit-Queue: Alexander Timin <altimin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545126}
Former-commit-id: f2b39a21d127181a5114857d8c2c886fc1bc1214